--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,9 @@
 .banner-description{
   font-family: "Azeret Mono", monospace;
   padding-top: 24px;
+  padding-bottom: 20px;
   font-size: 16px;
+  line-height: 26px;
   color: rgb(13, 19, 33);
   opacity: 0.7;
   font-weight: 400px;
@@ -50,12 +52,11 @@
 .button-styles{
     width: 208px;
     height: 64px;
-    margin-top: 32px;
+    margin-top:50px;
     font-size: 20px;
     font-weight: 600px;
     border-radius: 8px;
     background: rgb(13, 19, 33);
-    
     color: rgb(255, 255, 255);
 }
 
@@ -63,19 +64,128 @@
 .frist-section{
     width: 1140px;
     height: 1395px;
-    border: 1px solid red;
+    /* border: 1px solid rebeccapurple; */
     margin: 0% auto;
-    margin-top: 74px;
+    margin-top:74px ;
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.02);
+
 }
-.section-container{
+.frist-section-container{
     width: 946px;
     height: 1072px;
-    margin: 0% auto;
+    margin: 0%auto;
     margin: 80px 96px 80px 96px;
-    border: 1px solid rebeccapurple;
+    /* border: 1px solid red; */
 }
-.sections-content{
+.sections-frist-content{
     text-align: center;
+}
+
+.sections-frist-content{
+    display: block;
+    justify-content: center;
+    align-items: center;
+}
+.frist-section-titile{
+  font-family: "Azeret Mono", monospace;
+  font-size: 32px;
+  font-weight: 800px;
+  color: black;
+
+}
+.frist-section-description{
+    font-family: "Azeret Mono", monospace;
+    padding-top: 24px;
+    font-size: 16px;
+    line-height: 26px;
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+    font-weight: 400px;
+}  
+.frist-sections-second-contain{
+    width: 946px;
+    height: 336px;
+    margin-top: 48px;
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    /* border: 1px solid rebeccapurple; */
+}
+
+.frist-sections-second-containers{
+    padding: 48px 48px 48px 48px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.frist-sections-second-content{
+    width: 477px;
+    height: 220px;
+    /* border: 1px solid green; */
+} 
+.images-frist-section{
+    width: 274.17px;
+    height: 240px;
+    /* border: 1px solid yellow; */
+}
+.images-frist{
+    width: 259.56px;
+    height: 217.01px;
+    /* border: 1px solid navy; */
+
+}
+.frist-section-second-title{
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+  
+   
+}
+.frist-section-second-subtitle{
+    padding-top: 16px;
+    color: rgb(71, 72, 73);
+    opacity: 0.7;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: Azeret Mono;
+}
+.second-button-styles{
+    width: 150px;
+    height: 48px;
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: 600px;
+    border: 1px solid grey;
+    background: white;
+    color: black;
+}
+/* second-blogs-styles */
+.frist-sections-third-contain{
+    width: 946px;
+    height: 336px;
+    margin-top: 32px;
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    /* border: 1px solid rebeccapurple; */
+
+}
+.frist-sections-third-containers{
+    padding: 48px 48px 48px 48px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.second-images-frist-section{
+    width: 240px;
+    height: 240px;
+}
+.frist-sections-third-content{
+    margin-right: 35px;
+    width: 477px;
+    height: 220px;
+    /* border: 1px solid  hotpink; */
 }
