--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,3 +189,52 @@
     height: 220px;
     /* border: 1px solid  hotpink; */
 }
+/* second-section-styles */
+.second-section{
+    width: 1140px;
+    height: 714px;
+    margin: 0 auto;
+    margin-top: 47px;
+    border: 1px solid goldenrod;
+
+}
+.seccond-section-container{
+    width: 852px;
+    height: 130px;
+    margin: 0% auto;
+    text-align: center;
+
+    
+}
+.second-section-title{
+    font-size: 32px;
+    font-weight: 800px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono; ;
+}
+.second-section-subtitile{
+    margin-top: 24px;
+    font-size: 16px;
+    font-weight: 400px;
+    line-height: 20px;
+
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+    font-family: Azeret Mono;
+}
+.second-sections-video{
+    border-radius: 16px;
+
+    margin-top: 48px;
+    border: 1px solid rgb(151, 148, 148);
+}
+
+iframe{
+    width: 1076px;
+    height: 500PX;
+    margin-top: 32PX;
+    margin-left: 30PX;
+    border-radius: 16PX;
+  
+}
+   
