--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,9 +302,49 @@ iframe{
     line-height: 18px;
     letter-spacing: 0%;
 }
+/* Fourth-section */
+.fourth-section{
+    width: 1140px;
+    height: 844px;
+    margin: 0% auto;
+    border: 1px solid teal;
+}
+.fourth-text-heading{
+    text-align: center;
+}
+.fourth-section-title{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+    letter-spacing: 0%;
+}
+.fourth-section-description{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    opacity: 0.7;
+    margin-top: 24px;
+}
+.fourth-sections-blogs{ 
+    width: 1140px;
+    height: 219px;
+    border: 1px solid hotpink;
 
 
-
+}
+.fourth-section-content{
+    width: 1060px;
+    height: 145px;
+    border: 1px solid hotpink;
+}
+.react-js{
+    width: 94.78px;
+    height: 84.41px;
+}
 
 
 
