--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
-
-/* nav{
-
+ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-left: 150px;
     margin-right: 150px;
    
-} */
+}
  *{
     margin: 0%;
     padding: 0%;
@@ -474,10 +472,27 @@ iframe{
 }
 /* footer-section */
 .footer-section{
-    width: 1440px;
+    width:1380px;
     height: 100px;
     margin-top: 79px;
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.03);
     border: 1px solid khaki;
+}
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid hotpink; */
+    margin: 32px 150px 32px 150px;
+}
+.footer-text{
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600px;
+    line-height: 23px;
+    text-align: center;
+}
+.footer-icon,a,img{
+    gap: 10px;
 }
