--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,9 +3,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 30px;
     margin-left: 150px;
     margin-right: 150px;
    
+}
+.names{
+    width: 204px;
+    height: 34px;
+    color: rgb(13, 19, 33);
+    font-size: 28px;
+    font-weight: 800px;
+    line-height: 33px;
+}
+.download{
+    width: 228px;
+    height: 58px;
+    color: rgb(13, 19, 33);
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    border-radius: 8px;
+    opacity: 0.8;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
 }
  *{
     margin: 0%;
@@ -23,7 +44,7 @@
  .banner-section{
     max-width: 1440px;
     min-height: 652px;
-    margin-top: 130px;
+    margin-top: 50px;
     /* border: 1px solid rebeccapurple; */
     background-image: url(../assets/Hero-bg.png);
     background-repeat: no-repeat;
@@ -161,12 +182,13 @@
 .second-button-styles{
     width: 150px;
     height: 48px;
-    margin-top: 5px;
+    margin-top: 32px;
     font-size: 20px;
     font-weight: 600px;
     border: 1px solid grey;
     background: white;
     color: black;
+    opacity: 0.7;
 }
 /* second-blogs-styles */
 .frist-sections-third-contain{
@@ -179,8 +201,10 @@
 
 }
 .frist-sections-third-containers{
+    background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
     padding: 48px 48px 48px 48px;
     display: flex;
+    border-radius: 16px;
     justify-content: space-between;
     align-items: center;
 
@@ -399,7 +423,7 @@ iframe{
     margin-top: 49px;
     border-radius: 16px;
     background: rgb(30, 30, 30);
-    background-image:url(../assets/handshake.jpg);
+    background-image: linear-gradient(360deg ,rgb(7,4,17),rgba(7,2,0,0)100%),url(../assets/handshake.jpg);
     background-position: center;
     background-size: cover;
 }
@@ -471,18 +495,20 @@ iframe{
     background: rgb(255, 255, 255);
 }
 /* footer-section */
-.footer-section{
+#footer-section{
     width:1380px;
     height: 100px;
     margin-top: 79px;
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.03);
     border: 1px solid khaki;
+    border: none;
 }
 .footer-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 40px;
     /* border: 1px solid hotpink; */
     margin: 32px 150px 32px 150px;
 }
