--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,13 +80,20 @@
     width: 208px;
     height: 64px;
     margin-top:50px;
-    font-size: 20px;
-    font-weight: 600px;
+   
+    
     border-radius: 8px;
     background: rgb(13, 19, 33);
-    color: rgb(255, 255, 255);
+    
 }
+a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-weight: 600px;
+    font-size: 24px;
+    line-height: 23px;
 
+}
 /* Frist-section */
 .frist-section{
     width: 1140px;
@@ -519,6 +526,6 @@ iframe{
     line-height: 23px;
     text-align: center;
 }
-.footer-icon,a,img{
-    gap: 10px;
+img{
+    margin-left: 24px;
 }
