--- a/styles/styles.css
+++ b/styles/styles.css
@@ -203,12 +203,12 @@ a{
     height: 336px;
     margin-top: 32px;
     border-radius: 16px;
-    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
     /* border: 1px solid rebeccapurple; */
 
 }
 .frist-sections-third-containers{
-    background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    
     padding: 48px 48px 48px 48px;
     display: flex;
     border-radius: 16px;
@@ -261,7 +261,7 @@ a{
 .second-sections-video{
     border-radius: 16px;
     margin-top: 48px;
-    /* border: 1px solid rgb(151, 148, 148); */
+    border: 1px solid rgb(151, 148, 148);
 }
 
 iframe{
@@ -298,7 +298,6 @@ iframe{
 }
 .html-blogs {
     border-radius: 16px;
-
     background: rgba(255, 76, 30, 0.05);
 
 }
@@ -389,6 +388,7 @@ iframe{
     width: 94.78px;
     height: 84.41px;
 }
+
 .rect{
     font-size: 24px;
     color: rgb(13, 19, 33);
