--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
  nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-top: 30px;
     margin-left: 150px;
     margin-right: 150px;
    
+}
+.nav-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width:1120px;
+    height: 150px;
+ 
+
+
 }
 .names{
     width: 204px;
@@ -45,7 +52,8 @@
     max-width: 1440px;
     min-height: 652px;
     margin-top: 50px;
-    /* border: 1px solid rebeccapurple; */
+    margin-top: 0% auto;
+ 
     background-image: url(../assets/Hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -56,7 +64,7 @@
     height: 582px;
     margin-top: 26px;
     text-align: center;
-    /* border: 1px solid red; */
+  
 
  }
 .banner-text{
@@ -80,8 +88,6 @@
     width: 208px;
     height: 64px;
     margin-top:50px;
-   
-    
     border-radius: 8px;
     background: rgb(13, 19, 33);
     
@@ -98,7 +104,7 @@ a{
 .frist-section{
     width: 1140px;
     height: 1395px;
-    /* border: 1px solid rebeccapurple; */
+
     margin: 0% auto;
     margin-top:74px ;
     border-radius: 16px;
@@ -110,7 +116,7 @@ a{
     height: 1072px;
     margin: 0%auto;
     margin: 80px 96px 80px 96px;
-    /* border: 1px solid red; */
+
 }
 .sections-frist-content{
     text-align: center;
@@ -143,7 +149,7 @@ a{
     margin-top: 48px;
     border-radius: 16px;
     background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
-    /* border: 1px solid rebeccapurple; */
+   
 }
 
 .frist-sections-second-containers{
@@ -156,17 +162,17 @@ a{
 .frist-sections-second-content{
     width: 477px;
     height: 220px;
-    /* border: 1px solid green; */
+   
 } 
 .images-frist-section{
     width: 274.17px;
     height: 240px;
-    /* border: 1px solid yellow; */
+  
 }
 .images-frist{
     width: 259.56px;
     height: 217.01px;
-    /* border: 1px solid navy; */
+   
 
 }
 .frist-section-second-title{
@@ -204,7 +210,7 @@ a{
     margin-top: 32px;
     border-radius: 16px;
     background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
-    /* border: 1px solid rebeccapurple; */
+  
 
 }
 .frist-sections-third-containers{
@@ -224,7 +230,7 @@ a{
     margin-right: 35px;
     width: 477px;
     height: 220px;
-    /* border: 1px solid  hotpink; */
+  
 }
 /* second-section-styles */
 .second-section{
@@ -232,7 +238,7 @@ a{
     height: 714px;
     margin: 0 auto;
     margin-top: 47px;
-    /* border: 1px solid goldenrod; */
+
 
 }
 .seccond-section-container{
@@ -259,16 +265,18 @@ a{
     font-family: Azeret Mono;
 }
 .second-sections-video{
+    text-align: center;
     border-radius: 16px;
-    margin-top: 48px;
+    margin-top: 38px;
     border: 1px solid rgb(151, 148, 148);
 }
 
 iframe{
     width: 1076px;
-    height: 500PX;
-    margin-top: 32PX;
-    margin-left: 30PX;
+    height: 550PX;
+    margin-bottom:12px;
+    margin-top: 15PX;
+    text-align: center;
     border-radius: 16PX;
   
 }
@@ -278,7 +286,7 @@ iframe{
     width: 1140px;
     height: 714px;
     margin: 0 auto;
-    margin-top: 47px;
+    margin-top: 78px;
     /* border: 1px solid goldenrod; */
 
 }
@@ -505,6 +513,7 @@ iframe{
 #footer-section{
     width:1380px;
     height: 100px;
+    margin: 0% auto;
     margin-top: 79px;
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.03);
