--- a/styles/styles.css
+++ b/styles/styles.css
@@ -492,7 +492,7 @@ iframe{
     line-height: 23px;
     font-family: Azeret Mono;
     font-weight: 600;
-    padding-left: 20px;
+    padding: 20px;
     width: 120px;
     height: 58px;
     border: none;
